--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,8 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
+		        	<li><a href="/about">Research</a></li>
+				<li><a href="/teaching">Teaching</a></li>
 	        		<li><a href="/cv">CV</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
@@ -21,8 +22,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	        		<li><a href="mailto:eliana.duarte@ovgu.de">email</a></li>
+	        		<li><a href="https://github.com/emduart2">github.com/emduart2</a></li>
 				</ul>
 			</footer>
 		</body>
