email and video

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:eliana.duarte@ovgu.de">email</a></li>
+	        		<li><a href="mailto:eliana.gelvez@fc.up.pt">email</a></li>
 	        		<li><a href="https://github.com/emduart2">github.com/emduart2</a></li>
 				</ul>
 			</footer>
